# Simulation-Supermache

./: CMakeLists.txt  README.md  main.c
caisse/: caisse.c  caisse.h
client/: client.c  client.h
employe/: employe.c  employe.h
manager/: manager.c  manager.h
producteur/: producteur.c  producteur.h
queue/: queue.c  queue.h
rayon/: rayon.c  rayon.h
superviseur/: superviseur.c  superviseur.h
